# apps/api/lib/zanshin_api/analytics/projector.ex
@@ -1,0 +1,9 @@
+defmodule ZanshinApi.Analytics.Projector do
+  @moduledoc """
+  Behaviour for analytics projectors that transform domain events into read models.
+  """
+
+  alias ZanshinApi.Events.DomainEvent
+
+  @callback project(DomainEvent.t(), keyword()) :: :ok | {:error, term()}
+end
